Made the site more mobile friendly (potential text-wrap issues on iphone 4 resolved). Normalized captialization in headings.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,13 +94,14 @@ br {
     text-align: left;
     height:auto;
     width: auto;
-    margin-left: 7em;
+    margin-left: 6em;
     margin-top: 1em;
     margin-bottom: 0em;
 }
 
 #headerText h2{
-     line-height:0%;
+     line-height: 0%;
+     white-space: nowrap;
 }
 
 #headerDetails {
